--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>WebRTC File Sharing</h1>
       <ul>
         <li class="connection-status" style="color: red;">Status: Offline</li>
-        <li class="connection-id" style="color: cadetblue;">ID: none</li>
+        <li class="connection-id" style="color: cadetblue;">none ID</li>
         <li style="color:blue; cursor: pointer;" onclick="document.querySelector('input.file-input').click()">Share file [+]</li>
       </ul>
       
